--- a/__test/offline.html
+++ b/__test/offline.html
@@ -2,43 +2,59 @@
 <html lang="en">
 
 <head>
-    <title>Offline</title>
+    <title>Test Offline Detection</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <!-- Turn off caching when changing code so you can see changes on web browser -->
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="-1">
-
     <!-- CSS vendors: Bootstrap, Font-Awesome Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
-
-    <!-- JS Vendors: jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
-    <!-- QUnit -->
-    <script src="/bower_components/qunit/qunit/qunit.js"></script>
-    <link rel="stylesheet" href="/bower_components/qunit/qunit/qunit.css"></link>
 
 </head>
 
 <body>
     <div class="container">
-        <!-- <div id="qunit"></div> -->
+        <h1>Test Offline Detection</h1>
+        <main class="display-status fs-2 text-white text-center block-center mt-2 mb-2"></main>
+        <aside class="fw-light">
+            Instructions: Toggle offline or online at Chrome's DevTools -> Network -> Online, etc dropdown.
+        </aside>
     </div>
     <!-- container -->
 
     <script>
+        // function to display status
+        function setDisplay(text) {
+            const _display = document.querySelector(".display-status");
+            if (text === "Online") {
+                _display.classList.remove("bg-success", "bg-danger");
+                _display.classList.add("bg-success");
+                _display.innerText = "Online";
+            } else if (text === "Offline") {
+                _display.classList.remove("bg-success", "bg-danger");
+                _display.classList.add("bg-danger");
+                _display.innerText = "Offline";
+            }
+        }
+
+        // check online/offline status when loaded
+        window.addEventListener('load', () => {
+            if (navigator.onLine) setDisplay("Online");
+            else setDisplay("Offline")
+        });
+
+        // set status to online when online event
+        window.addEventListener('online', () => {
+            setDisplay("Online");
+        });
+
+        // set status to offline when offline event
+        window.addEventListener('offline', () => {
+            setDisplay("Offline");
+        });
     </script>
 
     <!-- JS Vendors: Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-    <!-- JS Vendors: Jquery UI -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css"></link>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
 </body>
 
