Test IndexedDB by interacting with it

--- a/__test/offline.html
+++ b/__test/offline.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <h1>Test Offline Detection</h1>
-        <main class="display-status fs-2 text-white text-center block-center mt-2 mb-2"></main>
+        <main class="display-status fs-2 text-white text-center block-center my-2"></main>
         <aside class="fw-light">
             Instructions: Toggle offline or online at Chrome's DevTools -> Network -> Online, etc dropdown.
         </aside>
