--- a/__test/indexeddb.html
+++ b/__test/indexeddb.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>A</title>
+    <title>Test IndexedDB</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
@@ -12,44 +12,186 @@
 
     <!-- CSS vendors: Bootstrap, Font-Awesome Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
 
     <!-- JS Vendors: jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-    <!-- QUnit -->
-    <script src="/bower_components/qunit/qunit/qunit.js"></script>
-    <link rel="stylesheet" href="/bower_components/qunit/qunit/qunit.css"></link>
-
+    <style>
+        /* So when devtools not opened qunit dialog doesnt cover the page content */
+        
+        #qunit {
+            position: relative;
+        }
+    </style>
 </head>
 
 <body>
     <div class="container">
+        <h1>Test IndexedDB</h1>
+        <main class="contents">
+            <div class="card m-2">
+                <div class="card-title">
+                    <div class="fs-2 p-2">Interact IndexedDB</div>
+                    <hr class="m-0" />
+                </div>
+                <div class="card-body">
+                    <button onclick="readAll()">Read all </button>
+                    <button onclick="add()">Add data </button>
+                    <button onclick="deleteAll()">Clear data </button>
+
+                    <aside class="fw-light mt-2">
+                        <div>Also see in DevTools: Chrome's DevTools -> Application -> IndexedDb -> Database -> Object Store.</div>
+                        <div>You have to press Refresh icon because this view gets stale.</div>
+                    </aside>
+
+                    <div class="results my-2">
+                        <ul></ul>
+                    </div>
+                </div>
+            </div>
+        </main>
         <div id="qunit"></div>
     </div>
     <!-- container -->
 
     <script>
-        QUnit.module("Test A");
+        function renderResults(results) {
+            const resultsDiv = document.querySelector(".results");
+            resultsDiv.innerHTML = "";
 
-        QUnit.test("Testing A", function(assert) {
-            assert.true(true, "passed");
-        });
+            // Render .results>ul>li*N
+            let ul = document.createElement("ul");
 
-        QUnit.module("Test B");
+            // Iterate [{record}, {record}, ...]
+            for (keyI in results) {
+                let record = results[keyI]
+                let li = document.createElement("li");
 
-        QUnit.test("Testing B", function(assert) {
-            assert.true(true, "passed");
-        });
+                // Iterate {key:val, key:val, ...}
+                for (key in record) {
+                    let val = record[key];
+
+                    let spanKey = document.createElement("span");
+                    spanKey.className = "fw-bold";
+                    spanKey.innerText = `${key}: `;
+
+                    let spanVal = document.createElement("span");
+                    spanVal.innerText = `${val},  `;
+
+                    li.append(spanKey, spanVal);
+                }
+                ul.appendChild(li);
+            }
+            resultsDiv.append(ul);
+        }
+        // IndexedDB
+        // Client Database API.
+        // The concept is database -> object stores (tables) -> records (rows)
+
+        // create variable to hold db connection
+        window.db = null;
+
+        function start() {
+
+            // establish a connection to IndexedDB database called 'pizza_hunt' and set it to version 1
+
+            const request = indexedDB.open('pizza_hunt');
+            // upon a successful 
+
+            request.onsuccess = function(event) {
+
+                // when db is successfully created with its object store (from onupgradedneeded event above) or simply established a connection, save reference to db in global variable
+                window.db = event.target.result;
+
+            };
+
+            // this event will emit if the database version changes (nonexistant to version 1, v1 to v2, etc.)
+            request.onupgradeneeded = function(event) {
+                // save a reference to the database 
+                window.db = event.target.result;
+                // create an object store (table) called `new_pizza`, set it to have an auto incrementing primary key of sorts 
+                db.createObjectStore('new_pizza', {
+                    autoIncrement: true
+                });
+
+                // window.db = db;
+            };
+
+        }
+        start();
+
+        function add() {
+            // open a new transaction with the database with read and write permissions 
+            // first param: names of object stores that are in the scope of the new transaction (array of strings) or only one object store in the scope of the new transaction (string):
+            const transaction = db.transaction(['new_pizza'], 'readwrite');
+
+            // access the object store for `new_pizza`
+            const pizzaObjectStore = transaction.objectStore('new_pizza');
+
+            // add record to your store with add method
+            pizzaObjectStore.add({
+                a: 1,
+                b: 2
+            });
+        } // add
+
+        function deleteAll() {
+            // Access object store with read and write permissions
+            const transaction = db.transaction(['new_pizza'], 'readwrite');
+
+            // access the new_pizza object store
+            const pizzaObjectStore = transaction.objectStore('new_pizza');
+            // clear all items in your store
+            pizzaObjectStore.clear();
+        }
+
+        function readAll() {
+
+            // open a transaction on your db
+            const transaction = db.transaction(['new_pizza'], 'readwrite');
+
+            // access your object store
+            const pizzaObjectStore = transaction.objectStore('new_pizza');
+
+            // get all records from store and set to a variable
+            const getAll = pizzaObjectStore.getAll();
+
+            // upon a successful .getAll() execution, run this function
+            getAll.onsuccess = function() {
+                console.log(getAll.result);
+                renderResults(getAll.result);
+                // if there was data in indexedDb's store, let's send it to the api server
+                // if (getAll.result.length > 0) {
+                //     fetch('/api/pizzas', {
+                //             method: 'POST',
+                //             body: JSON.stringify(getAll.result),
+                //             headers: {
+                //                 Accept: 'application/json, text/plain, */*',
+                //                 'Content-Type': 'application/json'
+                //             }
+                //         })
+                //         .then(response => response.json())
+                //         .then(serverResponse => {
+                //             if (serverResponse.message) {
+                //                 throw new Error(serverResponse);
+                //             }
+                //             // open one more transaction
+                //             // deleteAll();
+
+                //             alert('All saved pizza has been submitted!');
+                //         })
+                //         .catch(err => {
+                //             console.log(err);
+                //         });
+                // }
+            };
+            console.dir(getAll);
+
+        }
     </script>
 
     <!-- JS Vendors: Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-    <!-- JS Vendors: Jquery UI -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.min.css"></link>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
 
 </body>
 
