--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
-    <link rel="manifest" href="manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
     <title>Budget Tracker</title>
 </head>
@@ -46,7 +46,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
+
 </body>
 
 </html>
