--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,15 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="/js/index.js"></script>
 
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener("load", () => {
+                navigator.serviceWorker.register("sw.js")
+                    .then(console.log)
+                    .catch(console.error);
+            });
+        }
+    </script>
 </body>
 
 </html>
