--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#317EFB">
     <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/vendors/font-awesome-v4.7.0.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 
     <link rel="manifest" href="/manifest.json" />
@@ -44,8 +44,7 @@
 
         <canvas id="myChart"></canvas>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="/js/vendors/chart.v2.8.0.min.js"></script>
     <script src="/js/index.js"></script>
 
     <script>
