Refactored Tests "Offline Detection" and "IndexdDb" into production: Handling IndexedDB and MongoDB data exchanges when internet connection is back online or goes offline

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
     <meta name="theme-color" content="#317EFB">
     <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
 
+    <!-- Styling -->
     <link rel="stylesheet" href="/css/vendors/font-awesome-v4.7.0.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 
+    <!-- PWA -->
     <link rel="manifest" href="/manifest.json" />
 
     <title>Budget Tracker</title>
@@ -46,6 +48,7 @@
     </div>
     <script src="/js/vendors/chart.v2.8.0.min.js"></script>
     <script src="/js/index.js"></script>
+    <script src="/js/idb.js"></script>
 
     <script>
         if ('serviceWorker' in navigator) {
