Added Reset button that clears database

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
             <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
             <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
             <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+            <button id="reset-btn"><i class="fa fa-reset"></i> Reset</button>
             <p class="error"></p>
         </div>
 
