Updated README.md with link to live tests

--- a/__test/index.html
+++ b/__test/index.html
@@ -27,6 +27,8 @@
             <li><a target="_blank" href="/indexeddb.html">IndexedDb</a></li>
         </ul>
 
+        <p>Looking for the full app <a href="../">Budget Tracker</a>?</p>
+
     </div>
     <!-- container -->
 
