Made compatible with a Hostinger VPS

--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="theme-color" content="#317EFB">
-    <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/app/budget-tracker/icons/icon-192x192.png" type="image/x-icon">
 
     <!-- Styling -->
-    <link rel="stylesheet" href="/css/vendors/font-awesome-v4.7.0.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/app/budget-tracker/css/vendors/font-awesome-v4.7.0.min.css">
+    <link rel="stylesheet" href="/app/budget-tracker/css/styles.css">
 
     <!-- PWA -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/app/budget-tracker/manifest.json" />
 
     <title>Budget Tracker</title>
 </head>
@@ -47,9 +47,9 @@
 
         <canvas id="myChart"></canvas>
     </div>
-    <script src="/js/vendors/chart.v2.8.0.min.js"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/idb.js"></script>
+    <script src="/app/budget-tracker/js/vendors/chart.v2.8.0.min.js"></script>
+    <script src="/app/budget-tracker/js/index.js"></script>
+    <script src="/app/budget-tracker/js/idb.js"></script>
 
     <script>
         if ('serviceWorker' in navigator) {
